# Neural-Network-for-Emotion-Recognize

./: .gitattributes  .gitignore  README.md  analyze_dataset.ipynb  analyze_dataset.py  calculate_stats.py  clr.py  config.py  dataset_analysis.csv  dataset_statistics.csv  domain_models.py  download_dataset.py  graphs_and_report.py  model_training.py  model_training_v2_test.py  prepare_data.py  prepare_data_v2.py  pyproject.toml  requirements.txt  visualize_energy_and_graphs.py  visualize_spec.py
analyze_dataset/: visualize_energy_and_graphs.py  visualize_spec.py
dataset/CREMA-D/: VideoDemographics.csv
prepare_data/: augment_and_extract.py  calculate_stats.py  data_generator.py  data_splitter.py  dataset_processor.py  files.py  info_extractor.py  process_files_batching.py  save_dataset.py  utils.py
prepare_data/components/: base.py  data_splitter.py
prepare_data/components/audio/: feature_extraction.py  pipeline.py
prepare_data/pipelines/: base.py
prepare_data/pipelines/audio/: pipeline.py
results_crnn_v2/: logs_training1.txt
results_crnn_v2/second_iteration(0.4 dropout)/: logs_training2.txt
results_crnn_v2/third_iteration(0.3 dropout))/: logs_training3.txt
