[project]
name = "neural-network"
version = "0.1.0"
description = ""
authors = [
    {name = "Gealor",email = "gzazulya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "keras (>=3.11.3,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
